--- a/front/sass/base/_base.scss
+++ b/front/sass/base/_base.scss
@@ -7,29 +7,6 @@
  */
 html {
   box-sizing: border-box;
-}
-
-/**
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-/**
- * Basic styles for links
- */
-a {
-  color: $red-color;
-  text-decoration: none;
-
-  @include on-event {
-    color: $text-color;
-    text-decoration: underline;
-  }
+  margin: auto;
+  max-width: 1440px;
 }
