--- a/front/sass/base/_fonts.scss
+++ b/front/sass/base/_fonts.scss
@@ -1,3 +1,10 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+p {
+    font-family: 'Lato', 'DM Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'DM Sans', sans-serif;
+}
