--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -6,30 +6,20 @@
   'abstracts/functions',
   'abstracts/mixins';
 
-// 2. Vendors
-@import
-  'vendors/normalize';
-
-// 3. Base stuff
+// 2. Base stuff
 @import
   'base/base',
-  'base/fonts',
-  'base/typography',
-  'base/helpers';
+  'base/fonts';
 
-// 4. Layout-related sections
+// 3. Layout-related sections
 @import
   'layout/header',
   'layout/footer';
 
-// 5. Components
+// 4. Components
 @import
   'components/button';
 
-// 6. Page-specific styles
+// 5. Page-specific styles
 @import
   'pages/home';
-
-// 7. Themes
-@import
-  'themes/default';
