--- a/front/sass/layout/_header.scss
+++ b/front/sass/layout/_header.scss
@@ -30,7 +30,7 @@ body {
                     @include font-lato-400;
                     width: 97%;
                     height: 100%;
-                    background: url('../../assets/images/search_icon.svg') no-repeat right center;
+                    background: url('../assets/images/search_icon.svg') no-repeat right center;
                     background-size: 3rem;
                     background-position: 98% 50%;
                     background-color: $light-grey;
