--- a/front/css/style.css
+++ b/front/css/style.css
@@ -103,22 +103,23 @@ body header nav #filters {
   margin-top: 1.55em;
   display: flex;
   gap: 1.25em;
+  max-width: 840px;
 }
-body header nav #filters div {
+body header nav #filters .tagList_container {
   z-index: 5;
   min-width: 170px;
-  max-width: 840px;
+  max-width: 850px;
   height: 69px;
   border: none;
   outline: none;
   border-radius: 5px;
 }
-body header nav #filters div .input_field {
+body header nav #filters .tagList_container .input_field {
   width: 100%;
   height: 100%;
   position: relative;
 }
-body header nav #filters div .input_field input {
+body header nav #filters .tagList_container .input_field input {
   display: flex;
   border: none;
   outline: none;
@@ -128,7 +129,7 @@ body header nav #filters div .input_field input {
   color: white !important;
   padding: 0 0.5em;
 }
-body header nav #filters div .input_field input::placeholder {
+body header nav #filters .tagList_container .input_field input::placeholder {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -137,23 +138,23 @@ body header nav #filters div .input_field input::placeholder {
   color: white;
   text-align: left;
 }
-body header nav #filters div .input_field input:focus::placeholder {
+body header nav #filters .tagList_container .input_field input:focus::placeholder {
   color: transparent;
 }
-body header nav #filters div .input_field i {
+body header nav #filters .tagList_container .input_field i {
   position: absolute;
   right: 5%;
   top: 35%;
   color: white;
 }
-body header nav #filters div ul {
+body header nav #filters .tagList_container ul {
   list-style: none;
   display: none;
   column-count: 3;
   margin-top: -4px;
   padding: 1em;
 }
-body header nav #filters div ul li {
+body header nav #filters .tagList_container ul li {
   border-radius: 10px;
   font-family: "Lato", DM Sans;
   font-weight: 300;
@@ -170,7 +171,7 @@ body header nav #filters div ul li {
   white-space: nowrap;
   transition: all 0.25s ease-in-out;
 }
-body header nav #filters div ul li:hover {
+body header nav #filters .tagList_container ul li:hover {
   filter: brightness(1.25);
   cursor: pointer;
   text-overflow: initial;
