Barre de recherche totalement foncitonnelle, Scénario A1 OK, scénario A2 OK, scénario 3 OK, reste à faire : gestion du retrait des filtres, input dans les filtres

--- a/front/sass/layout/_header.scss
+++ b/front/sass/layout/_header.scss
@@ -156,6 +156,14 @@ body {
                                 overflow-wrap: break-word;
                             }
                         }
+                        & span {
+                            width: 100%;
+                            margin: 0;
+                            & p {
+                                margin: 0;
+                                color: white;
+                            }
+                        }
                     }
                 }
                 & #ingredients, #ingredients .ingredients, #ingredients .ingredients li {
