--- a/front/css/style.css
+++ b/front/css/style.css
@@ -178,6 +178,14 @@ body header nav #filters .tagList_container ul li:hover {
   overflow: initial;
   overflow-wrap: break-word;
 }
+body header nav #filters .tagList_container ul span {
+  width: 100%;
+  margin: 0;
+}
+body header nav #filters .tagList_container ul span p {
+  margin: 0;
+  color: white;
+}
 body header nav #filters #ingredients, body header nav #filters #ingredients .ingredients, body header nav #filters #ingredients .ingredients li {
   background-color: #3282F7;
 }
